# phasing

./: CMakeCache.txt  CMakeLists.txt  Makefile  callqual  cmake_install.cmake  data_reader.cpp  data_reader.h  main.cpp  out.txt  realignment.h  test  vcfQUALstat.cpp
ctest/: test  test.cpp
data/: aln.sam  base_counts.txt  expect_output.vcf  ref.fa  ref.fa.fai  variants.vcf
filter/: filter.py
htslib/: bgzf.h  cram.h  faidx.h  hfile.h  hts.h  hts_defs.h  hts_endian.h  hts_expr.h  hts_log.h  hts_os.h  kbitset.h  kfunc.h  khash.h  khash_str2int.h  klist.h  knetfile.h  kroundup.h  kseq.h  ksort.h  kstring.h  regidx.h  sam.h  synced_bcf_reader.h  tbx.h  thread_pool.h  vcf.h  vcf_sweep.h  vcfutils.h
include/: data_reader.h  group.h  hptree.h  realignment.h
src/: data_reader.cpp  group.cpp  realignment.cpp
